# particle-compression-idle

./: .gitignore  .mcp.json  README.md  index.html  package-lock.json  package.json  svelte.config.js  tsconfig.json  tsconfig.node.json  vite.config.ts
.github/workflows/: deploy.yml
design/: DESIGN.md  GDD.md  TEAM.md  accessibility.md  account-sync-recovery.md  analytics-plan.md  art-direction-cosmic.md  art-direction.md  asset-list.md  asset-pipeline.md  audio-design.md  budget.md  business-legal-checklist.md  cicd-plan.md  codex.md  community-ops.md  content-pipeline.md  cosmic-direction.md  data-spec.md  dev-schedule.md  director-review.md  economy.md  followup-bigcrunch-framing.md  followup-codex-ramp.md  followup-systems.md  glossary.md  launch-plan.md  localization-plan.md  m2-render-plan.md  narrative.md  playtest-plan.md  qa-report-v2.md  qa-report-v3.md  qa-report.md  reality-check.md  research-tree.md  review-render-art.md  review-render-tech.md  risk-register.md  roadmap.md  (+10 more)
design/research/: design-patterns.md  layout-visual-study.md  libraries-infra.md  open-source-games.md  theme-competitors.md
design/sim/: baseline_final.py  bekenstein_k.py  bigcrunch.py  calibrate.py  campaign.py  campaign2.py  campaign6.py  codex_race.py  costcurve.py  costcurve2.py  diag.py  engine.py  final_verify.py  holographic_cap_def.py  integrated.py  milestone_shift.py  (+9 more)
prototypes/: cosmic-layers.html  cosmic-particle-game.html
src/: App.svelte  game.ts  main.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs
(+98 files in other folders)
